# cheddar-proxy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  commitlint.config.js  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
core/: Cargo.toml  README.md  cargokit.yaml
core/src/: lib.rs
core/src/api/: mod.rs  proxy_api.rs
core/src/mcp/: auth.rs  manager.rs  mod.rs  sdk_server.rs
core/src/models/: breakpoint.rs  mod.rs  transaction.rs  websocket.rs
core/src/platform/: mac.rs  mod.rs  noop.rs  windows.rs
core/src/proxy/: breakpoints.rs  cert_manager.rs  mod.rs  server.rs  websocket.rs
core/src/replay/: mod.rs
core/src/storage/: har.rs  mod.rs  transaction_store.rs  websocket_store.rs
core/tests/: proxy_lifecycle.rs
docs/: BUILDING.md  MCP_PROXY_SPECIFICATION.md  PERFORMANCE.md  PROJECT_SPECIFICATION.md
scripts/: README.md  build_release.ps1  build_release.sh  build_rust.sh  run.ps1  run.sh  run_tests.ps1  run_tests.sh
scripts/benchmark/: benchmark_latency.sh  benchmark_memory.py  benchmark_process_metrics.py  benchmark_startup.sh  benchmark_throughput.sh  run-process-benchmark.ps1  run_process_benchmark.sh
scripts/icons/: extract_cheese_icon.py
ui/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
ui/integration_test/: e2e_test.dart  e2e_windows_test.dart  performance_test.dart
ui/lib/: main.dart
ui/lib/widgets/: about_dialog.dart  app_toolbar.dart  breakpoint_edit_dialog.dart  breakpoint_rules_dialog.dart  certificate_dialog.dart  confirmation_dialog.dart  dialog_styles.dart  macos_button.dart  macos_context_menu.dart  platform_context_menu.dart  settings_dialog.dart  status_bar.dart  update_dialog.dart  windows_context_menu.dart  windows_menu_bar.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/macos/Flutter/: GeneratedPluginRegistrant.swift
ui/rust_builder/: pubspec.yaml
ui/test/: keyboard_focus_test.dart  widget_test.dart  widget_tests.dart
ui/windows/: CMakeLists.txt
(+38 files in other folders)
