[package]
name = "rust_lib_cheddarproxy"
version = "0.1.0"
edition = "2021"
description = "Core proxy engine for Cheddar Proxy network traffic inspector"
license = "MIT"
repository = "https://github.com/aman-shahid/cheddarproxy"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "cheddarproxy_mcp"
path = "src/bin/cheddarproxy_mcp.rs"

[[bin]]
name = "cheddarproxy_mcp_bridge"
path = "src/bin/cheddarproxy_mcp_bridge.rs"

[dependencies]
# Flutter-Rust bridge
flutter_rust_bridge = "=2.11.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
time = "0.3"

# HTTP handling
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-graceful", "http1", "http2", "client", "client-legacy"] }
http-body-util = { version = "0.1", features = ["channel"] }
httparse = "1.8"
http = "1.1"
h2 = "0.4"
bytes = "1.5"
dashmap = "5.5"
# TLS
rustls = "0.23"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
webpki-roots = "0.26"
tokio-rustls = "0.26"

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rustls-pemfile = "2.2.0"
x509-parser = "0.18.0"
once_cell = "1.19"

# HTTP client for request replay (using native-tls to avoid rustls crypto provider conflicts)
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }

# Platform integrations
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

# MCP SDK (Model Context Protocol)
rmcp = { version = "0.11", features = ["server", "transport-io"] }
schemars = "1.0"
dirs = "6.0.0"
gethostname = "0.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
serial_test = "3.1"
